--- a/themes/tuften/scss/_tiki-selectors.scss
+++ b/themes/tuften/scss/_tiki-selectors.scss
@@ -11,4 +11,645 @@ $imagePath: "../images/";
 $themeFontPath: "../fonts/";
 
 @font-face {
-	font-
+	font-family: "et-book";
+	src: url('#{$themeFontPath}et-book/et-book-roman-line-figures/et-book-roman-line-figures.eot');
+	src: url('#{$themeFontPath}et-book/et-book-roman-line-figures/et-book-roman-line-figures.eot?#iefix') format("embedded-opentype"), url('#{$themeFontPath}et-book/et-book-roman-line-figures/et-book-roman-line-figures.woff') format("woff"), url('#{$themeFontPath}et-book/et-book-roman-line-figures/et-book-roman-line-figures.ttf') format("truetype"), url('#{$themeFontPath}et-book/et-book-roman-line-figures/et-book-roman-line-figures.svg#etbookromanosf') format("svg");
+	font-weight: normal;
+	font-style: normal
+}
+
+@font-face {
+	font-family: "et-book";
+	src: url('#{$themeFontPath}et-book/et-book-display-italic-old-style-figures/et-book-display-italic-old-style-figures.eot');
+	src: url('#{$themeFontPath}et-book/et-book-display-italic-old-style-figures/et-book-display-italic-old-style-figures.eot?#iefix') format("embedded-opentype"), url('#{$themeFontPath}et-book/et-book-display-italic-old-style-figures/et-book-display-italic-old-style-figures.woff') format("woff"), url('#{$themeFontPath}et-book/et-book-display-italic-old-style-figures/et-book-display-italic-old-style-figures.ttf') format("truetype"), url('#{$themeFontPath}et-book/et-book-display-italic-old-style-figures/et-book-display-italic-old-style-figures.svg#etbookromanosf') format("svg");
+	font-weight: normal;
+	font-style: italic
+}
+
+@font-face {
+	font-family: "et-book";
+	src: url('#{$themeFontPath}et-book/et-book-bold-line-figures/et-book-bold-line-figures.eot');
+	src: url('#{$themeFontPath}et-book/et-book-bold-line-figures/et-book-bold-line-figures.eot?#iefix') format("embedded-opentype"), url('#{$themeFontPath}et-book/et-book-bold-line-figures/et-book-bold-line-figures.woff') format("woff"), url('#{$themeFontPath}et-book/et-book-bold-line-figures/et-book-bold-line-figures.ttf') format("truetype"), url('#{$themeFontPath}et-book/et-book-bold-line-figures/et-book-bold-line-figures.svg#etbookromanosf') format("svg");
+	font-weight: bold;
+	font-style: normal
+}
+/*@font-face {
+	font-family: ETBembo;
+	src: url('${themeFontPath}ETBembo-RomanLF.ttf');
+}
+
+@font-face {
+	font-family: ETBembo;
+	src: url('${themeFontPath}ETBembo-DisplayItalic.ttf');
+	font-weight: normal;
+	font-style: italic;
+}*/
+
+// -------------------- Color system -------------------- //
+.text-warning { color: #7C5B09; }
+
+// -------------------- Body (large elements -------------------- //
+body {
+	counter-reset: sidenote-counter;
+}
+
+body.fullscreen { background: $body-bg; }
+
+body.tiki.navbar-padding {
+	padding-top: 60px;
+}
+
+section {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+}
+
+article,
+.wikitext {
+    font-size: 1.4rem;
+    line-height: 2rem;
+}
+
+// -------------------- Links -------------------- //
+a:not(.btn) {
+    padding-bottom: 1px;
+    text-decoration: none;
+    background: linear-gradient(#fffff8, #fffff8), linear-gradient(#fffff8, #fffff8), linear-gradient(#333, #333);
+    background-size: 0.05em 1px, 0.05em 1px, 1px 1px;
+    background-repeat: no-repeat, no-repeat, repeat-x;
+    text-shadow: 0.03em 0 #fffff8, -0.03em 0 #fffff8, 0 0.03em #fffff8, 0 -0.03em #fffff8, 0.06em 0 #fffff8, -0.06em 0 #fffff8, 0.09em 0 #fffff8, -0.09em 0 #fffff8, 0.12em 0 #fffff8, -0.12em 0 #fffff8, 0.15em 0 #fffff8, -0.15em 0 #fffff8;
+    background-position: 0 93%, 100% 93%, 0  93%;
+}
+
+.icon_edit_section a,
+.pagetitle a,
+.box-logo a,
+a.tikihelp,
+a.tips:not(.btn),
+.nav a,
+nav a,
+
+#fullscreenbutton a,
+.onefootnote > a:not(.wiki),
+.pager li > a,
+a.prevnext,
+a.note1,
+a.note2,
+a.note3,
+a.note4,
+a.note5,
+a.note6,
+a.note7,
+a.note8,
+a.note9,
+a.note10,
+sup.footnote1 a,
+sup.footnote2 a,
+sup.footnote3 a,
+sup.footnote4 a,
+sup.footnote5 a {
+    border-bottom: none;
+    background: none;
+    text-shadow: none;
+}
+
+a.btn,
+.pagination > .active > a,
+.pagination > li > a {
+    text-shadow: none;
+}
+
+.btn.btn-link {
+    background: none;
+}
+
+.pager li > a {
+    border: 1px solid #ddd;
+}
+
+a:hover {
+    text-decoration: none;
+}
+
+a:link::selection {
+    text-shadow: 0.03em 0 #b4d5fe, -0.03em 0 #b4d5fe, 0 0.03em #b4d5fe, 0 -0.03em #b4d5fe, 0.06em 0 #b4d5fe, -0.06em 0 #b4d5fe, 0.09em 0 #b4d5fe, -0.09em 0 #b4d5fe, 0.12em 0 #b4d5fe, -0.12em 0 #b4d5fe, 0.15em 0 #b4d5fe, -0.15em 0 #b4d5fe;
+    background: #b4d5fe;
+}
+
+a:link::-moz-selection {
+    text-shadow: 0.03em 0 #b4d5fe, -0.03em 0 #b4d5fe, 0 0.03em #b4d5fe, 0 -0.03em #b4d5fe, 0.06em 0 #b4d5fe, -0.06em 0 #b4d5fe, 0.09em 0 #b4d5fe, -0.09em 0 #b4d5fe, 0.12em 0 #b4d5fe, -0.12em 0 #b4d5fe, 0.15em 0 #b4d5fe, -0.15em 0 #b4d5fe;
+    background: #b4d5fe;
+}
+
+a .icon {font-size: 1.2rem;}
+
+.icon-link-external {
+    font-size: .8rem;
+}
+
+// Display only the correct "sidenote" per footnotearea (only specifying up to 12 sidenotes per page)
+#ref_footnote1 + .footnotearea div:not(#footnote1),
+#ref_footnote2 + .footnotearea div:not(#footnote2),
+#ref_footnote3 + .footnotearea div:not(#footnote3),
+#ref_footnote4 + .footnotearea div:not(#footnote4),
+#ref_footnote5 + .footnotearea div:not(#footnote5),
+#ref_footnote6 + .footnotearea div:not(#footnote6),
+#ref_footnote7 + .footnotearea div:not(#footnote7),
+#ref_footnote8 + .footnotearea div:not(#footnote8),
+#ref_footnote9 + .footnotearea div:not(#footnote9),
+#ref_footnote10 + .footnotearea div:not(#footnote10),
+#ref_footnote11 + .footnotearea div:not(#footnote11),
+#ref_footnote12 + .footnotearea div:not(#footnote12),
+.footlink.note1 + .footnotearea div:not(.note1),
+.footlink.note2 + .footnotearea div:not(.note2),
+.footlink.note3 + .footnotearea div:not(.note3),
+.footlink.note4 + .footnotearea div:not(.note4),
+.footlink.note5 + .footnotearea div:not(.note5),
+.footlink.note6 + .footnotearea div:not(.note6),
+.footlink.note7 + .footnotearea div:not(.note7),
+.footlink.note8 + .footnotearea div:not(.note8),
+.footlink.note9 + .footnotearea div:not(.note9),
+.footlink.note10 + .footnotearea div:not(.note10),
+.footlink.note11 + .footnotearea div:not(.note11),
+.footlink.note12 + .footnotearea div:not(.note12)
+{ display: none; }
+
+.footlink::before,
+.footlink::after {
+    content: inherit;
+}
+
+a.footlink,
+div[id^="footnote"]> span > a {
+    text-decoration: none;
+    color: #A80000;
+    border-bottom: none;
+    padding-bottom: 0;
+}
+
+.onefootnote a:not(.wiki) {
+    margin-left: -1.2em;
+}
+
+.footlink.marginnote,
+div.marginnote > span > a {
+    display: none;
+}
+
+// -------------------- Paragraphs -------------------- //
+article p,
+.wikitext p {
+    margin-top: 1.4rem;
+    margin-bottom: 1.4rem;
+    //	padding-right: 0;
+    vertical-align: baseline;
+}
+
+.blockquote p {
+    //	font-size: 1.1rem;
+    width: 80%;
+    margin-left: 3rem;
+}
+
+// -------------------- Components -------------------- //
+// -------------------- Typography -------------------- //
+h1, h2, h3 {
+    font-weight: 400;
+    line-height: 1;
+}
+
+h1 {
+    margin-top: 4rem;
+    //	margin-bottom: 1.5rem;
+    font-size: 3.2rem;
+}
+
+h2 {
+    font-style: italic;
+    margin-top: 2.1rem;
+    font-size: 2.2rem;
+}
+
+h3 {
+    font-style: italic;
+    font-size: 1.7rem;
+    margin-top: 2rem;
+}
+
+blockquote,
+.blockquote {
+    color: #525252;
+}
+
+.sans {
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, sans-serif;
+}
+
+// -------------------- Tables -------------------- //
+table {
+    // width: 98%;
+    //	text-align: right;
+    font-size: 1.2rem;
+    line-height: 1.4;
+    //	margin: 1.4rem 1%;
+    border-collapse: separate;
+    border-spacing: 0 5px;
+    -webkit-font-feature-settings: 'tnum'; /* This is technically redundant */
+    -moz-font-feature-settings: 'tnum';
+}
+
+thead th,
+th,
+.popover-content td {
+    border-bottom: 1px solid #aaaaaa !important;
+    border-collapse: separate;
+    border-spacing: 5px 5px;
+}
+
+thead th,
+th { font-weight: 400; }
+
+span.table-label {
+    padding-top: 8px;
+}
+
+/* to maintain height relative to table header row */
+
+table.booktabs {
+    margin: 0 auto;
+    border-spacing: 0;
+    border-top: 2px solid #333333;
+    border-bottom: 2px solid #333333;
+}
+
+table.table {
+//    width: auto;
+    border-spacing: 0;
+    border-top: 2px solid #333333;
+    border-bottom: 2px solid #333333;
+}
+
+.tiki .col1 .table-responsive {
+    border: none;
+}
+
+.booktabs th {
+    border-bottom: 1px solid #333333;
+    padding: 0.65ex 0.5em 0.4ex 0.5em;
+    font-weight: normal;
+    text-align: center;
+}
+
+.booktabs th.cmid {
+    border-bottom: 1px solid #666666;
+}
+
+.booktabs th.nocmid {
+    border-bottom: none;
+}
+
+.booktabs tbody tr:first-child td {
+    padding-top: 0.65ex;
+}
+
+/* add space between thead row and tbody */
+
+.booktabs td {
+    padding-left: 0.5em;
+    padding-right: 0.5em;
+    text-align: left;
+}
+
+.booktabs caption {
+    font-size: 90%;
+    text-align: left;
+    width: auto;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 1ex;
+    caption-side: top;
+}
+
+.booktabs tbody tr td.l {
+    text-align: left !important;
+}
+
+.booktabs tbody tr td.c {
+    text-align: center !important;
+}
+
+.booktabs tbody tr td.r {
+    text-align: right !important;
+}
+
+.table-caption {
+    float: right;
+    clear: right;
+    margin-right: -60%;
+    width: 50%;
+    margin-top: 0;
+    margin-bottom: 0;
+    font-size: 1.0rem;
+    line-height: 1.6;
+}
+
+// -------------------- Buttons -------------------- //
+.btn-outline-warning {
+    color: #926C0C;
+    border-color: #926C0C;
+}
+
+// -------------------- Forms -------------------- //
+// -------------------- Form validation -------------------- //
+// -------------------- Navs -------------------- //
+// -------------------- Navbar -------------------- //
+.topbar { margin-bottom: 30px;}
+
+.topbar,
+.navbar-fixed-top {
+	border-bottom: 1px solid #c2c2c2;
+}
+
+.navbar-header,
+.navbar .nav > li > a,
+.topbar .nav > li > a {
+	font-variant: small-caps;
+}
+
+.heading-link { font-size: 60%; }
+
+.description {
+	font-style: italic;
+	margin-top: 1rem;
+	margin-bottom: 1rem;
+	font-size: 1.8rem;
+	display: block;
+	line-height: 1;
+}
+
+// -------------------- Dropdowns -------------------- //
+.cssmenu_horiz ul li a,
+.cssmenu_vert ul li a {
+    font-size: 18px;
+    padding-top: 3px;
+    padding-bottom: 3px;
+}
+
+.sf-arrows .sf-with-ul {
+    padding-right: 1.75em;
+}
+
+// -------------------- Pagination -------------------- //
+// -------------------- Jumbotron -------------------- //
+// -------------------- Cards -------------------- //
+div:not(#col1) .card.module,
+.blogpost .card {
+	border: none;
+	background: transparent;
+	.card-heading {
+		background: none;
+	}
+	.card-footer {
+		background: none;
+	}
+}
+
+h3.card-title,
+.blogpost h2.card-title {
+	font-size: 2rem;
+}
+
+.blogpost h2.card-title { margin-bottom: 14px; }
+
+// -------------------- Tooltips -------------------- //
+// -------------------- Popovers -------------------- //
+// -------------------- Toasts -------------------- //
+// -------------------- Badges -------------------- //
+//.badge.bg-secondary {
+//    color: #333333;
+//}
+// -------------------- Modals -------------------- //
+// -------------------- Alerts -------------------- //
+// -------------------- Progress bars -------------------- //
+// -------------------- List group -------------------- //
+// -------------------- Image thumbnails -------------------- //
+// -------------------- Figures -------------------- //
+// -------------------- Breadcrumbs -------------------- //
+// -------------------- Carousel -------------------- //
+// -------------------- Spinners -------------------- //
+// -------------------- Close -------------------- //
+// -------------------- Code -------------------- //
+code {
+    font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
+    color: #222;
+    font-size: 1.125rem;
+    line-height: 1.6;
+    background: transparent;
+    border: none;
+}
+
+h1 .code, h2 .code, h3 .code { font-size: 1.2rem; }
+.tiki #autotoc .nav > li > a { font-size: 1.2rem; }
+.tiki #autotoc .nav .nav > li > a { font-size: 1.1rem; }
+.tiki #autotoc .nav-link.active, .tiki #autotoc .nav-link.active:hover, .tiki #autotoc .nav-link.active:focus {
+    border-left: 2px solid #a25D25;
+}
+
+.marginnote .code, .sidenote .code { font-size: 1rem; }
+
+pre.code {
+    padding: 0 0 0 2em;
+    overflow-x: scroll;
+}
+
+// -------------------- Utilities -------------------- //
+// -------------------- Printing -------------------- //
+
+// -------------------- Etc -------------------- //
+
+// -------------------- Tiki-specific -------------------- //
+
+// -------------------- External libraries -------------------- //
+// Pivottable
+.tiki table.pvtTable tr th {
+    background: url('#{$imagePath}comment-bg2.png');
+    color: $body-color;
+    border-color: #ddd;
+}
+
+.tiki table.pvtTable tr th,
+.tiki table.pvtTable tr td { border-color: #ddd; }
+
+/* Medium devices (desktops, 992px and up) */
+@media (min-width: 992px) {
+	.cat_Sidenotes .col1 > article > #page-data,
+	.cat_sidenotes .col1 > article > #page-data {
+		width: 62%;
+	}
+	.cat_Sidenotes .footnotearea,
+	.cat_sidenotes .footnotearea {
+		float: right;
+		clear: both;
+		margin-right: -60%;
+		width: 50%;
+		margin-top: 0;
+		margin-bottom: 0;
+	}
+	.fullwidth {
+		margin-right: -48%;
+	}
+}
+
+.sidenote,
+	//.marginnote,
+.footnotearea {
+	font-size: 1.0rem;
+	line-height: 1.6;
+	vertical-align: baseline;
+	margin-left: 15px;
+	//	position: relative;
+}
+
+.footnotearea hr {
+	display: none;
+}
+
+
+
+
+.quote_footer {
+	font-size: 1.1rem;
+	width: 80%;
+	text-align: right;
+}
+
+ul {
+	list-style-type: none;
+}
+
+figure {
+	-webkit-margin-start: 0;
+	-webkit-margin-end: 0;
+}
+
+figcaption {
+	float: right;
+	clear: right;
+	margin-right: 18.5%;
+	margin-top: 0;
+	margin-bottom: 0;
+	font-size: 1.0rem;
+	line-height: 1.6;
+	vertical-align: baseline;
+	position: relative;
+}
+
+figure.fullwidth figcaption {
+	margin-right: 24%;
+}
+
+// img { max-width: 100%; }
+
+.sidenote-number {
+	counter-increment: sidenote-counter;
+}
+
+.sidenote-number:after,
+.sidenote:before {
+	content: counter(sidenote-counter) " ";
+	position: relative;
+	vertical-align: baseline;
+	color: #A80000;
+}
+
+.sidenote-number:after {
+	content: counter(sidenote-counter);
+	font-size: 0.9rem;
+	top: -0.5rem;
+	left: 0.1rem;
+}
+
+.sidenote:before {
+	content: counter(sidenote-counter) ". ";
+	position: absolute;
+	/* 100% refers to the computed width of the number, so this transform
+	 * shifts the number just outside the left edge of the sidenote box,
+	 * with a buffer of 0.25rem, no matter how many digits the number has. */
+	transform: translateX(-100%) translateX(-0.25rem);
+}
+
+.newthought {
+	display: inline;
+	font-variant: small-caps;
+	font-size: 1.2em;
+}
+
+input.margin-toggle {
+	display: none;
+}
+
+label.sidenote-number {
+	display: inline;
+}
+
+label.margin-toggle:not(.sidenote-number) {
+	display: none;
+}
+
+@media (max-width: 760px) {
+
+	.footnotearea {
+		margin: 1em 0 1em 3em;
+	}
+	/*
+		label.margin-toggle:not(.sidenote-number) {
+			display: inline;
+		}
+	
+		.sidenote, .marginnote {
+			display: none;
+		}
+	
+		.margin-toggle:checked + .sidenote,
+		.margin-toggle:checked + .marginnote {
+			display: block;
+			float: left;
+			left: 1rem;
+			clear: both;
+			width: 95%;
+			margin: 1rem 2.5%;
+			vertical-align: baseline;
+			position: relative;
+		}
+	
+		label {
+			cursor: pointer;
+		}
+	
+		pre.code {
+			padding: 0;
+		}
+	
+		.table-caption {
+			display: block;
+			float: right;
+			clear: both;
+			width: 98%;
+			margin-top: 1rem;
+			margin-bottom: 0.5rem;
+			margin-left: 1%;
+			margin-right: 1%;
+			vertical-align: baseline;
+			position: relative;
+		}
+	
+		table, table.booktabs {
+			width: 85%;
+		}
+	
+		img {
+			width: 100%;
+		} */
+}
+
+
