--- a/themes/base_files/scss/_select2-tiki_colors.scss
+++ b/themes/base_files/scss/_select2-tiki_colors.scss
@@ -2,4 +2,77 @@
 
 //.select2-container--bootstrap-5 .select2-selection--single {
 //    padding: 0.375rem 2.25rem 0.375rem 0.75rem;
-//    backgrou
+//    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23343a40' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M2 5l6 6 6-6'/%3e%3c/svg%3e");
+//    background-repeat: no-repeat;
+//    background-position: right 0.75rem center;
+//    background-size: 16px 12px;
+//}
+
+.tiki .select2-container--bootstrap-5 .select2-selection {
+//    width: 100%;
+//    min-height: calc(1.5em + (0.75rem + 2px));
+    padding: $input-padding-y $input-padding-x;
+    font-family: $input-font-family;
+    font-size: $input-font-size;
+    font-weight: $input-font-weight;
+    line-height: $input-line-height;
+    color: $input-color;
+    background-color: $input-bg;
+    border: $input-border-width solid $input-border-color;
+    border-radius:$input-border-radius;
+//    transition: $input-border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.tiki .select2-container--bootstrap-5 .select2-selection--single .select2-selection__rendered,
+.tiki .select2-container--bootstrap-5 .select2-dropdown .select2-results__options .select2-results__option {
+    font-weight: $input-font-weight;
+    line-height: $input-line-height;
+    color: $input-color;
+}
+
+
+.tiki .select2-container--bootstrap-5  .select2-dropdown {
+    background-color: $form-select-bg;
+    border: $form-select-border-width solid $form-select-border-color;
+    border-radius: $form-select-border-radius;
+}
+
+.tiki .select2-results__options .select2-results__option
+//    ,.select2-results__option
+    {
+        color: $input-color;
+        background: $input-bg;
+}
+
+    ///*.select2-container--bootstrap-5 .select2-dropdown*/ .select2-results__options .select2-results__option.select2-results__option--highlighted {
+    //    color: #000;
+    //    background-color: #f8f9fa;
+    //}
+    ///*.select2-container--bootstrap-5 .select2-dropdown*/ .select2-results__options .select2-results__option.select2-results__option--selected,
+    ///*.select2-container--bootstrap-5 .select2-dropdown*/ .select2-results__options .select2-results__option[aria-selected="true"] {
+    //    color: #fff;
+    //    background-color: #0d6efd;
+    //}
+
+
+.tiki .select2-container--bootstrap-5 .select2-dropdown .select2-search .select2-search__field {
+    display: block;
+    width: 100%;
+    padding: $form-select-padding-y $form-select-padding-x;
+    font-family: inherit;
+    font-size: $form-select-font-size;
+    font-weight: $form-select-font-weight;
+    line-height: $form-select-line-height;
+    color: $form-select-color;
+    background-color: $form-select-bg;
+    border: 1px solid $form-select-border-color;
+    border-radius: 0.25rem;
+    transition: $form-select-border-color 0.15s ease-in-out, $form-select-box-shadow 0.15s ease-in-out;
+}
+
+.tiki .select2-container--bootstrap-5 .select2-dropdown .select2-results__options .select2-results__option.select2-results__option--selected,
+.tiki .select2-container--bootstrap-5 .select2-dropdown .select2-results__options .select2-results__option[aria-selected="true"] {
+    color: $component-active-color;
+    background-color: $component-active-bg;
+}
+
